# smart_house

./: CMakeLists.txt  LcdOperation.c  LcdOperation.h  Point.h  dateWinget.c  dateWinget.h  gameWiget.c  gameWiget.h  mainWiget  mainWiget.c
